--- a/style.css
+++ b/style.css
@@ -3,6 +3,43 @@
 	font-family: 'Quicksand'; 
 	src: url(Quicksand-SemiBold.ttf); 
 }
+/* i put all .urls tags here, because it won't work somewhy with them */
+#close-gallery {
+  font-family: 'Quicksand';
+  font-size: 25px;
+  margin-top: 5px;
+  text-decoration: none;
+  color:rgb(255, 255, 255);
+  user-select: none;
+}
+#close-gallery:hover i {
+  color:red;
+}
+#gallery {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s ease-out;
+}
+#gallery-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+#gallery-content img {
+  width: 250px;
+  height: 250px;
+  margin: 20px;
+  border-radius: 10%;
+  box-shadow: 0px 0px 100px rgba(100, 0, 131, 0.25);
+  transition: .5s;
+}
+#gallery-content img:hover {
+  box-shadow: 0px 0px 100px rgba(150, 0, 196, 0.5);
+}
 /* preloader */
 #preloader {
   position: fixed;
@@ -129,4 +166,9 @@ video {
       height: 250px;
       margin-right: 35px !important;
     }
+    #gallery-content img {
+      width: 150px;
+      height: 150px;
+      margin: 15px;
     }
+}
