--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 #gallery-content img {
-  width: 250px;
+/*   width: 250px; */
   height: 250px;
   margin: 20px;
   border-radius: 10%;
@@ -172,7 +172,7 @@ video {
       margin-right: 35px !important;
     }
     #gallery-content img {
-      width: 150px;
+/*       width: 150px; */
       height: 150px;
       margin: 15px;
     }
