--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow: visible;
 }
 #gallery-content img {
 /*   width: 250px; */
