--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ video {
     text-align: center;
     animation: rainbow 1s infinite;
     font-size: 65px;
-    margin-top: 350px;
+    margin-top: 30vh;
     font-family: 'Quicksand';
     user-select: none;
     color: white;
